2014-06-12  Mark Lam  <mark.lam@apple.com>

        Remove some dead / unused code.
        <https://webkit.org/b/133828>

        Reviewed by Filip Pizlo.

        * builtins/BuiltinExecutables.cpp:
        (JSC::BuiltinExecutables::createBuiltinExecutable):
        * bytecode/UnlinkedCodeBlock.cpp:
        (JSC::UnlinkedFunctionExecutable::UnlinkedFunctionExecutable):
        * bytecode/UnlinkedCodeBlock.h:
        (JSC::UnlinkedFunctionExecutable::create):
        * bytecompiler/BytecodeGenerator.h:
        (JSC::BytecodeGenerator::makeFunction):
        * parser/Parser.h:
        (JSC::DepthManager::DepthManager): Deleted.
        (JSC::DepthManager::~DepthManager): Deleted.
        * runtime/CodeCache.cpp:
        (JSC::CodeCache::getFunctionExecutableFromGlobalCode):

2014-06-12  Mark Hahnenberg  <mhahnenberg@apple.com>

        Move structureHasRareData out of TypeInfo
        https://bugs.webkit.org/show_bug.cgi?id=133800

        Reviewed by Andreas Kling.

        StructureHasRareData was originally put in TypeInfo to avoid making Structure bigger, 
        but we have a few spare bits in Structure so it would be nice to remove this hack.

        * runtime/JSTypeInfo.h:
        (JSC::TypeInfo::newImpurePropertyFiresWatchpoints):
        (JSC::TypeInfo::structureHasRareData): Deleted.
        * runtime/Structure.cpp:
        (JSC::Structure::Structure):
        (JSC::Structure::allocateRareData):
        (JSC::Structure::cloneRareDataFrom):
        * runtime/Structure.h:
        (JSC::Structure::previousID):
        (JSC::Structure::objectToStringValue):
        (JSC::Structure::setObjectToStringValue):
        (JSC::Structure::setPreviousID):
        (JSC::Structure::clearPreviousID):
        (JSC::Structure::previous):
        (JSC::Structure::rareData):
        * runtime/StructureInlines.h:
        (JSC::Structure::setEnumerationCache):
        (JSC::Structure::enumerationCache):

2014-06-12  Zsolt Borbely  <zsborbely.u-szeged@partner.samsung.com>
