@@ -26,7 +26,12 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 # THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-NUMCPUS=`../../../Tools/Scripts/num-cpus`
+NUMCPUPATH="../../Tools/Scripts/num-cpus"
+if [ -x $NUMCPUPATH ]; then
+    NUMCPUS=`$NUMCPUPATH`
+else
+    NUMCPUS=8
+fi
 
 XSRCROOT="`pwd`/.."
 XSRCROOT=`realpath "$XSRCROOT"`
