@@ -1,3 +1,14 @@
+2014-06-12  Brent Fulgham  <bfulgham@apple.com>
+
+        [Win] Avoid fork bomb during build
+        https://bugs.webkit.org/show_bug.cgi?id=133837
+        <rdar://problem/17296034>
+
+        Reviewed by Tim Horton.
+
+        * WebCore.vcxproj/build-generated-files.sh: Use a reasonable
+        default value when the 'num-cpus' script is not available.
+
 2014-06-12  Gavin Barraclough  <barraclough@apple.com>
 
         Add support for thread/WorkQueue QoS
